--- a/index.html
+++ b/index.html
@@ -3,8 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpaceX</title>
+    <title>Space-X</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <img src="img/logo.svg" alt="Icon: SpaceX logo" class="logo" />
+      <nav class="main-nav">
+        <ul class="list">
+          <li class="item">
+            <a class="item-link main-link" href="#">Falcon 9</a>
+          </li>
+          <li class="item">
+            <a class="item-link main-link" href="#">Falcon Heavy</a>
+          </li>
+          <li class="item">
+            <a class="item-link main-link" href="#">Dragon</a>
+          </li>
+          <li class="item">
+            <a class="item-link main-link" href="#">Updates</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="secondary-menu">
+        <ul class="list">
+          <li class="item">
+            <a class="item-link secondary-link" href="#">About</a>
+          </li>
+          <li class="item">
+            <a class="item-link secondary-link" href="#">Gallery</a>
+          </li>
+          <li class="item">
+            <a class="item-link secondary-link" href="#">Shop</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
