--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/vidbg.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -43,11 +44,18 @@
         </ul>
       </nav>
     </header>
+
     <section class="main">
       <h1 class="title">Falcon Heavy</h1>
       <p class="description">
         The most powerful operational rocket in the world by a factor of two
       </p>
     </section>
+
+    <div class="video"></div>
+
+    <!-- Подключение JS -->
+    <script src="js/vidbg.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
