--- a/index.html
+++ b/index.html
@@ -54,6 +54,65 @@
 
     <div class="video"></div>
 
+    <section class="features">
+      <div class="overview">
+        <h2 class="features-title">Falcon Heavy<br />Overview</h2>
+        <table class="table">
+          <tr>
+            <td class="table-column">HEIGHT</td>
+            <td class="table-column">
+              <span class="si-unit">70 m / </span
+              ><span class="english-unit">229.6 ft</span>
+            </td>
+          </tr>
+          <tr>
+            <td class="table-column">DIAMETER</td>
+            <td class="table-column">
+              <span class="si-unit">12.2 m / </span>
+              <span class="english-unit">39.9 ft</span>
+            </td>
+          </tr>
+          <tr>
+            <td class="table-column">MASS</td>
+            <td class="table-column">
+              <span class="si-unit">1,420,788 kg / </span>
+              <span class="english-unit">3,125,735 lb</span>
+            </td>
+          </tr>
+          <tr>
+            <td class="table-column">PAYLOAD TO LEO</td>
+            <td class="table-column">
+              <span class="si-unit">63,800 kg / </span>
+              <span class="english-unit">140,660 lb</span>
+            </td>
+          </tr>
+          <tr>
+            <td class="table-column">PAYLOAD TO GTO</td>
+            <td class="table-column">
+              <span class="si-unit">26,700 kg / </span>
+              <span class="english-unit">58,860 lb</span>
+            </td>
+          </tr>
+          <tr>
+            <td class="table-column">PAYLOAD TO MARS</td>
+            <td class="table-column">
+              <span class="si-unit">16,800 kg / </span>
+              <span class="english-unit">37,040 lb</span>
+            </td>
+          </tr>
+        </table>
+
+        <h2 class="features-title">Unmatched<br />Performance</h2>
+        <p class="features-text">
+          With more than 5 million pounds of thrust at liftoff, Falcon Heavy is
+          the most capable rocket flying. By comparison, the liftoff thrust of
+          the Falcon Heavy equals approximately eighteen 747 aircraft at full
+          power. Falcon Heavy can lift the equivalent of a fully loaded 737
+          jetliner—complete with passengers, luggage and fuel—to orbit.
+        </p>
+      </div>
+    </section>
+
     <!-- Подключение JS -->
     <script src="js/vidbg.js"></script>
     <script src="js/main.js"></script>
