Create: parallax effect

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
           </tr>
         </table>
 
+        <img
+          src="img/rocket.png"
+          alt="Rocket"
+          class="rocket"
+          data-rellax-speed="7"
+        />
+
         <h2 class="features-title">Unmatched<br />Performance</h2>
         <p class="features-text">
           With more than 5 million pounds of thrust at liftoff, Falcon Heavy is
@@ -115,6 +122,7 @@
 
     <!-- Подключение JS -->
     <script src="js/vidbg.js"></script>
+    <script src="js/rellax.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
