--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           src="img/rocket.png"
           alt="Rocket"
           class="rocket"
-          data-rellax-speed="7"
+          data-rellax-speed="5"
         />
 
         <h2 class="features-title">Unmatched<br />Performance</h2>
@@ -119,6 +119,28 @@
         </p>
       </div>
     </section>
+
+    <footer class="footer">
+      <img src="img/logo.svg" alt="Logo: Space-X" class="logo" />
+      <nav class="footer-nav">
+        <ul class="list">
+          <li class="item"><a href="#" class="item-link">Twitter</a></li>
+          <li class="item"><a href="#" class="item-link">Youtube</a></li>
+          <li class="item"><a href="#" class="item-link">Instagram</a></li>
+          <li class="item"><a href="#" class="item-link">Flickr</a></li>
+          <li class="item"><a href="#" class="item-link">LinkedIn</a></li>
+          <li class="item"><a href="#" class="item-link">Privacy</a></li>
+          <li class="item"><a href="#" class="item-link">Policy</a></li>
+        </ul>
+      </nav>
+      <p class="footer-text">
+        For additional questions, contact
+        <a href="mailto:rideshare@spacex.com" class="footer-link"
+          >rideshare@spacex.com</a
+        >
+      </p>
+      <a href="#" class="button">Contact us</a>
+    </footer>
 
     <!-- Подключение JS -->
     <script src="js/vidbg.js"></script>
