--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/vidbg.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
-      <img src="img/logo.svg" alt="Icon: SpaceX logo" class="logo" />
-      <nav class="main-nav">
+      <img
+        src="img/logo.svg"
+        alt="Icon: SpaceX logo"
+        class="logo"
+        data-aos="fade-down"
+      />
+      <nav class="main-nav" data-aos="fade-down">
         <ul class="list">
           <li class="item">
             <a class="item-link main-link" href="#">Falcon 9</a>
@@ -30,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <nav class="secondary-menu">
+      <nav class="secondary-menu" data-aos="fade-down">
         <ul class="list">
           <li class="item">
             <a class="item-link secondary-link" href="#">About</a>
@@ -46,56 +52,60 @@
     </header>
 
     <section class="main">
-      <h1 class="title">Falcon Heavy</h1>
-      <p class="description">
+      <h1 class="title" data-aos="fade-up" data-aos-delay="500">
+        Falcon Heavy
+      </h1>
+      <p class="description" data-aos="fade-up" data-aos-delay="1000">
         The most powerful operational rocket in the world by a factor of two
       </p>
     </section>
 
-    <div class="video"></div>
+    <div class="video" data-aos="fade-up" data-aos-delay="1500"></div>
 
     <section class="features">
       <div class="overview">
-        <h2 class="features-title">Falcon Heavy<br />Overview</h2>
+        <h2 class="features-title" data-aos="fade-left">
+          Falcon Heavy<br />Overview
+        </h2>
         <table class="table">
           <tr>
             <td class="table-column">HEIGHT</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="100">
               <span class="si-unit">70 m / </span
               ><span class="english-unit">229.6 ft</span>
             </td>
           </tr>
           <tr>
             <td class="table-column">DIAMETER</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="200">
               <span class="si-unit">12.2 m / </span>
               <span class="english-unit">39.9 ft</span>
             </td>
           </tr>
           <tr>
             <td class="table-column">MASS</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="300">
               <span class="si-unit">1,420,788 kg / </span>
               <span class="english-unit">3,125,735 lb</span>
             </td>
           </tr>
           <tr>
             <td class="table-column">PAYLOAD TO LEO</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="400">
               <span class="si-unit">63,800 kg / </span>
               <span class="english-unit">140,660 lb</span>
             </td>
           </tr>
           <tr>
             <td class="table-column">PAYLOAD TO GTO</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="500">
               <span class="si-unit">26,700 kg / </span>
               <span class="english-unit">58,860 lb</span>
             </td>
           </tr>
           <tr>
             <td class="table-column">PAYLOAD TO MARS</td>
-            <td class="table-column">
+            <td class="table-column" data-aos="fade-left" data-aos-delay="600">
               <span class="si-unit">16,800 kg / </span>
               <span class="english-unit">37,040 lb</span>
             </td>
@@ -109,7 +119,9 @@
           data-rellax-speed="5"
         />
 
-        <h2 class="features-title">Unmatched<br />Performance</h2>
+        <h2 class="features-title" data-aos="fade-left">
+          Unmatched<br />Performance
+        </h2>
         <p class="features-text">
           With more than 5 million pounds of thrust at liftoff, Falcon Heavy is
           the most capable rocket flying. By comparison, the liftoff thrust of
@@ -145,6 +157,7 @@
     <!-- Подключение JS -->
     <script src="js/vidbg.js"></script>
     <script src="js/rellax.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
