--- a/index.html
+++ b/index.html
@@ -14,144 +14,190 @@
   </head>
   <body>
     <header class="header">
-      <img
-        src="img/logo.svg"
-        alt="Icon: SpaceX logo"
-        class="logo"
-        data-aos="fade-down"
-      />
-      <nav class="main-nav" data-aos="fade-down">
-        <ul class="list">
-          <li class="item">
-            <a class="item-link main-link" href="#">Falcon 9</a>
-          </li>
-          <li class="item">
-            <a class="item-link main-link" href="#">Falcon Heavy</a>
-          </li>
-          <li class="item">
-            <a class="item-link main-link" href="#">Dragon</a>
-          </li>
-          <li class="item">
-            <a class="item-link main-link" href="#">Updates</a>
-          </li>
-        </ul>
-      </nav>
-      <nav class="secondary-menu" data-aos="fade-down">
-        <ul class="list">
-          <li class="item">
-            <a class="item-link secondary-link" href="#">About</a>
-          </li>
-          <li class="item">
-            <a class="item-link secondary-link" href="#">Gallery</a>
-          </li>
-          <li class="item">
-            <a class="item-link secondary-link" href="#">Shop</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <div class="header-wrapper">
+          <img
+            src="img/logo.svg"
+            alt="Icon: SpaceX logo"
+            class="logo"
+            data-aos="fade-down"
+          />
+          <nav class="main-nav" data-aos="fade-down">
+            <ul class="list">
+              <li class="item">
+                <a class="item-link main-link" href="#">Falcon 9</a>
+              </li>
+              <li class="item">
+                <a class="item-link main-link" href="#">Falcon Heavy</a>
+              </li>
+              <li class="item">
+                <a class="item-link main-link" href="#">Dragon</a>
+              </li>
+              <li class="item">
+                <a class="item-link main-link" href="#">Updates</a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="secondary-menu" data-aos="fade-down">
+            <ul class="list">
+              <li class="item">
+                <a class="item-link secondary-link" href="#">About</a>
+              </li>
+              <li class="item">
+                <a class="item-link secondary-link" href="#">Gallery</a>
+              </li>
+              <li class="item">
+                <a class="item-link secondary-link" href="#">Shop</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
 
     <section class="main">
-      <h1 class="title" data-aos="fade-up" data-aos-delay="500">
-        Falcon Heavy
-      </h1>
-      <p class="description" data-aos="fade-up" data-aos-delay="1000">
-        The most powerful operational rocket in the world by a factor of two
-      </p>
+      <div class="container">
+        <div class="main-wrapper">
+          <h1 class="title" data-aos="fade-up" data-aos-delay="500">
+            Falcon Heavy
+          </h1>
+          <p class="description" data-aos="fade-up" data-aos-delay="1000">
+            The most powerful operational rocket in the world by a factor of two
+          </p>
+        </div>
+      </div>
     </section>
 
-    <div class="video" data-aos="fade-up" data-aos-delay="1500"></div>
+    <div class="video">
+      <div class="container">
+        <div
+          class="video-wrapper"
+          data-aos="fade-up"
+          data-aos-delay="1500"
+        ></div>
+      </div>
+    </div>
 
     <section class="features">
-      <div class="overview">
-        <h2 class="features-title" data-aos="fade-left">
-          Falcon Heavy<br />Overview
-        </h2>
-        <table class="table">
-          <tr>
-            <td class="table-column">HEIGHT</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="100">
-              <span class="si-unit">70 m / </span
-              ><span class="english-unit">229.6 ft</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="table-column">DIAMETER</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="200">
-              <span class="si-unit">12.2 m / </span>
-              <span class="english-unit">39.9 ft</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="table-column">MASS</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="300">
-              <span class="si-unit">1,420,788 kg / </span>
-              <span class="english-unit">3,125,735 lb</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="table-column">PAYLOAD TO LEO</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="400">
-              <span class="si-unit">63,800 kg / </span>
-              <span class="english-unit">140,660 lb</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="table-column">PAYLOAD TO GTO</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="500">
-              <span class="si-unit">26,700 kg / </span>
-              <span class="english-unit">58,860 lb</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="table-column">PAYLOAD TO MARS</td>
-            <td class="table-column" data-aos="fade-left" data-aos-delay="600">
-              <span class="si-unit">16,800 kg / </span>
-              <span class="english-unit">37,040 lb</span>
-            </td>
-          </tr>
-        </table>
+      <div class="container">
+        <div class="overview">
+          <h2 class="features-title" data-aos="fade-left">
+            Falcon Heavy<br />Overview
+          </h2>
+          <table class="table">
+            <tr>
+              <td class="table-column">HEIGHT</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="100"
+              >
+                <span class="si-unit">70 m / </span
+                ><span class="english-unit">229.6 ft</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-column">DIAMETER</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="200"
+              >
+                <span class="si-unit">12.2 m / </span>
+                <span class="english-unit">39.9 ft</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-column">MASS</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="300"
+              >
+                <span class="si-unit">1,420,788 kg / </span>
+                <span class="english-unit">3,125,735 lb</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-column">PAYLOAD TO LEO</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="400"
+              >
+                <span class="si-unit">63,800 kg / </span>
+                <span class="english-unit">140,660 lb</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-column">PAYLOAD TO GTO</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="500"
+              >
+                <span class="si-unit">26,700 kg / </span>
+                <span class="english-unit">58,860 lb</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="table-column">PAYLOAD TO MARS</td>
+              <td
+                class="table-column"
+                data-aos="fade-left"
+                data-aos-delay="600"
+              >
+                <span class="si-unit">16,800 kg / </span>
+                <span class="english-unit">37,040 lb</span>
+              </td>
+            </tr>
+          </table>
 
-        <img
-          src="img/rocket.png"
-          alt="Rocket"
-          class="rocket"
-          data-rellax-speed="5"
-        />
+          <img
+            src="img/rocket.png"
+            alt="Rocket"
+            class="rocket"
+            data-rellax-speed="5"
+          />
 
-        <h2 class="features-title" data-aos="fade-left">
-          Unmatched<br />Performance
-        </h2>
-        <p class="features-text">
-          With more than 5 million pounds of thrust at liftoff, Falcon Heavy is
-          the most capable rocket flying. By comparison, the liftoff thrust of
-          the Falcon Heavy equals approximately eighteen 747 aircraft at full
-          power. Falcon Heavy can lift the equivalent of a fully loaded 737
-          jetliner—complete with passengers, luggage and fuel—to orbit.
-        </p>
+          <h2 class="features-title" data-aos="fade-left">
+            Unmatched<br />Performance
+          </h2>
+          <p class="features-text">
+            With more than 5 million pounds of thrust at liftoff, Falcon Heavy
+            is the most capable rocket flying. By comparison, the liftoff thrust
+            of the Falcon Heavy equals approximately eighteen 747 aircraft at
+            full power. Falcon Heavy can lift the equivalent of a fully loaded
+            737 jetliner—complete with passengers, luggage and fuel—to orbit.
+          </p>
+        </div>
       </div>
     </section>
 
     <footer class="footer">
-      <img src="img/logo.svg" alt="Logo: Space-X" class="logo" />
-      <nav class="footer-nav">
-        <ul class="list">
-          <li class="item"><a href="#" class="item-link">Twitter</a></li>
-          <li class="item"><a href="#" class="item-link">Youtube</a></li>
-          <li class="item"><a href="#" class="item-link">Instagram</a></li>
-          <li class="item"><a href="#" class="item-link">Flickr</a></li>
-          <li class="item"><a href="#" class="item-link">LinkedIn</a></li>
-          <li class="item"><a href="#" class="item-link">Privacy</a></li>
-          <li class="item"><a href="#" class="item-link">Policy</a></li>
-        </ul>
-      </nav>
-      <p class="footer-text">
-        For additional questions, contact
-        <a href="mailto:rideshare@spacex.com" class="footer-link"
-          >rideshare@spacex.com</a
-        >
-      </p>
-      <a href="#" class="button">Contact us</a>
+      <div class="container">
+        <div class="footer-wrapper">
+          <img src="img/logo.svg" alt="Logo: Space-X" class="logo" />
+          <nav class="footer-nav">
+            <ul class="list">
+              <li class="item"><a href="#" class="item-link">Twitter</a></li>
+              <li class="item"><a href="#" class="item-link">Youtube</a></li>
+              <li class="item"><a href="#" class="item-link">Instagram</a></li>
+              <li class="item"><a href="#" class="item-link">Flickr</a></li>
+              <li class="item"><a href="#" class="item-link">LinkedIn</a></li>
+              <li class="item"><a href="#" class="item-link">Privacy</a></li>
+              <li class="item"><a href="#" class="item-link">Policy</a></li>
+            </ul>
+          </nav>
+          <p class="footer-text">
+            For additional questions, contact
+            <a href="mailto:rideshare@spacex.com" class="footer-link"
+              >rideshare@spacex.com</a
+            >
+          </p>
+          <a href="#" class="button">Contact us</a>
+        </div>
+      </div>
     </footer>
 
     <!-- Подключение JS -->
