--- a/index.html
+++ b/index.html
@@ -81,72 +81,48 @@
     <section class="features">
       <div class="container">
         <div class="overview">
-          <h2 class="features-title" data-aos="fade-left">
+          <h2 class="features-title" data-aos="fade-down">
             Falcon Heavy<br />Overview
           </h2>
           <table class="table">
             <tr>
               <td class="table-column">HEIGHT</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="100"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="100">
                 <span class="si-unit">70 m / </span
                 ><span class="english-unit">229.6 ft</span>
               </td>
             </tr>
             <tr>
               <td class="table-column">DIAMETER</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="200"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="200">
                 <span class="si-unit">12.2 m / </span>
                 <span class="english-unit">39.9 ft</span>
               </td>
             </tr>
             <tr>
               <td class="table-column">MASS</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="300"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="300">
                 <span class="si-unit">1,420,788 kg / </span>
                 <span class="english-unit">3,125,735 lb</span>
               </td>
             </tr>
             <tr>
               <td class="table-column">PAYLOAD TO LEO</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="400"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="400">
                 <span class="si-unit">63,800 kg / </span>
                 <span class="english-unit">140,660 lb</span>
               </td>
             </tr>
             <tr>
               <td class="table-column">PAYLOAD TO GTO</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="500"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="500">
                 <span class="si-unit">26,700 kg / </span>
                 <span class="english-unit">58,860 lb</span>
               </td>
             </tr>
             <tr>
               <td class="table-column">PAYLOAD TO MARS</td>
-              <td
-                class="table-column"
-                data-aos="fade-left"
-                data-aos-delay="600"
-              >
+              <td class="table-column" data-aos="fade-up" data-aos-delay="600">
                 <span class="si-unit">16,800 kg / </span>
                 <span class="english-unit">37,040 lb</span>
               </td>
@@ -160,7 +136,7 @@
             data-rellax-speed="5"
           />
 
-          <h2 class="features-title" data-aos="fade-left">
+          <h2 class="features-title" data-aos="fade-down">
             Unmatched<br />Performance
           </h2>
           <p class="features-text">
